--- a/net-sec/docker-compose.yml
+++ b/net-sec/docker-compose.yml
@@ -1,37 +1,18 @@
 services:
-  unbound-redis:
-    image: redis:latest
-    container_name: unbound-redis
-    restart: unless-stopped
-    volumes:
-      - ./redis/data:/data
-    networks:
-      - net_sec
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-
   unbound:
-    image: mvance/unbound:1.21.1
+    image: klutchell/unbound:latest
     container_name: unbound
     restart: unless-stopped
-    depends_on:
-      unbound-redis:
-        condition: service_healthy
+    # depends_on:
+    #   redis:
+    #     condition: service_healthy
     networks:
       net_sec:
-        ipv4_address: 172.16.81.10
+        ipv4_address: 10.50.0.10
     volumes:
       - ./unbound/config:/etc/unbound/custom.conf.d:ro
-    ports:
-      - "533:53/tcp" # Host port for testing; adjust if needed
-      - "533:53/udp"
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+    environment:
+      - REDIS_PORT=6379
     healthcheck:
       test: ["CMD", "drill", "@127.0.0.1", "example.com"]
       interval: 30s
@@ -39,7 +20,7 @@ services:
       retries: 3
 
   adguard:
-    image: adguard/adguardhome:v0.108.0-b.79
+    image: adguard/adguardhome:latest
     container_name: adguard
     restart: unless-stopped
     depends_on:
@@ -47,39 +28,40 @@ services:
         condition: service_healthy
     networks:
       net_sec:
-        ipv4_address: 172.16.81.11
+        ipv4_address: 10.50.0.5
     volumes:
       - ./adguard/work:/opt/adguardhome/work
       - ./adguard/conf:/opt/adguardhome/conf
     ports:
       - "8053:53/tcp" # DNS
       - "8053:53/udp"
-      - "3001:3000/tcp" # Initial setup web interface
       - "8082:80/tcp" # HTTP for admin (change to HTTPS in production)
       - "443:443/tcp" # HTTPS for admin
       - "853:853/tcp" # DNS-over-TLS
       - "853:853/udp" # DNS-over-QUIC (optional)
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000"]
+      test: ["CMD", "curl", "-f", "http://localhost/"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 10s
 
   wireguard:
-    image: linuxserver/wireguard:1.0.20250521
+    image: linuxserver/wireguard:latest
     container_name: wireguard
     cap_add:
       - NET_ADMIN
+      - SYS_MODULE
     environment:
       - PUID=1000 # Your user ID for file permissions
       - PGID=1000 # Your group ID
-      - TZ=Etc/UTC # Adjust to your timezone, e.g., America/New_York
-      - SERVERURL=auto # Or your public IP/domain for client configs
+      - TZ=Africa/Johannesburg # Adjust to your timezone, e.g., America/New_York
+      # - SERVERURL=auto # Or your public IP/domain for client configs
       - SERVERPORT=51820
       - PEERS=5 # Number of initial client configs to generate
-      - PEERDNS=172.16.81.11 # AdGuard Home's static IP
-      - INTERNAL_SUBNET=10.6.0.0 # WireGuard client subnet (avoid conflicts)
-      - ALLOWEDIPS=0.0.0.0/0 # Full tunnel; change to 172.16.81.0/24 for split-tunnel DNS only
+      - PEERDNS=10.50.0.5 # AdGuard Home's static IP
+      - INTERNAL_SUBNET=10.13.13.0/24 # WireGuard client subnet (avoid conflicts)
+      - ALLOWEDIPS=0.0.0.0/0 # Full tunnel; change to 172.20.0.0/24 for split-tunnel DNS only
       - LOG_CONFS=true # Log generated configs
     volumes:
       - ./wireguard/config:/config
@@ -93,16 +75,18 @@ services:
       adguard:
         condition: service_healthy
     networks:
-      - net_sec
+      net_sec:
+        ipv4_address: 10.50.0.2
     healthcheck:
-      test: ["CMD-SHELL", "wg show | grep interface || exit 1"]
+      test: ["CMD-SHELL", "wg show interfaces | grep -q wg0 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 20s # Give time for interface to come up
 
 networks:
   net_sec:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.16.81.0/24
+        - subnet: 10.50.0.0/16
