--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -2,9 +2,6 @@ services:
   portainer:
     container_name: portainer
     image: docker.io/portainer/portainer-ce:latest
-    ports:
-      - 9000:9000
-      - 9443:9443
     volumes:
       - /run/docker.sock:/var/run/docker.sock
       - portainer-data:/data
@@ -15,7 +12,14 @@ services:
       - TZ=Africa/Johannesburg
     restart: unless-stopped
     networks:
-      - frontend
+      - proxy-net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.portainer.rule=Host(`portainer.phumlaniarendse.co.za`)"
+      - "traefik.http.routers.portainer.entrypoints=websecure"
+      # - "traefik.http.routers.portainer.tls=true"
+      - "traefik.http.routers.portainer.tls.certresolver=staging"
+      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
 
 volumes:
   portainer-data:
@@ -23,9 +27,6 @@ volumes:
     driver: local
 
 networks:
-  frontend:
-    name: frontend
-    driver: bridge
-  backend:
-    name: backend
-    driver: bridge
+  proxy-net:
+    name: "proxy-net"
+    external: true
